fix: удалить свойство overflow у avatar

--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -5,7 +5,6 @@
   padding: 0;
   margin: 0;
   border-radius: 50%;
-  overflow: hidden;
   object-fit: cover;
   grid-area: avatar;
 }
